[#80] Reduced main page cards' event title text from 16pt to 14pt. This prevents 'PLL Time Attack' from overflowing the card width and making it wider, without making the text too much smaller. Resolves #80.

--- a/app/static/less/events_page.less
+++ b/app/static/less/events_page.less
@@ -143,7 +143,7 @@
 
 span {
     &.event-title {
-        font-size: 16px;
+        font-size: 14px;
         font-family: 'Roboto', sans-serif;
     }
 
